Step.02-Exercise-Lets-Navigate-Already
(cherry picked from commit c6a1a853de2b12881724eef143c47910bd261474)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
 
     // Material Design
     implementation "com.google.android.material:material:$version_material"
+    // TODO (01) Add the dependencies for navigation fragment ktx and navigation UI ktx
 }
